--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 	id 'org.springframework.boot' version '3.5.5'
 	id 'io.spring.dependency-management' version '1.1.7'
 	id "jacoco"
-	id("org.sonarqube") version "latest.release"
+	id 'org.sonarqube' version '4.4.1.3373'
 }
 
 group = 'com.dapp'
