--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,11 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+    jvmArgs = [
+            "--add-opens=java.base/java.lang=ALL-UNNAMED",
+            "--add-opens=java.base/java.util=ALL-UNNAMED",
+            "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED"
+    ]
 	finalizedBy jacocoTestReport
 }
 
