--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,14 @@ api.security.jwt.expiration-ms=86400000
 
 # Apunta al scraper-service local para desarrollo
 scraper.service.url=http://localhost:8081
+
+management.endpoints.web.exposure.include=health,info,metrics,env,prometheus,beans,mappings
+management.endpoints.web.base-path=/monitoring
+management.endpoint.health.show-details=always
+management.endpoint.metrics.access=unrestricted
+
+info.app.name=Football API
+info.app.version=3.0.0
+info.app.description=Sistema de gestión deportiva - Entrega 3
+info.app.team=Grupo M
+info.app.features=JWT,Scraper Integration,Actuator Endpoints
